// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List rendering render as div and div doesn't throw 1`] = `
<div>
  <div
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
  >
    <div
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      data-value="test-value-1"
      id="test-value-1"
      role="listitem"
    >
      First ListItem
    </div>
    <div
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      data-value="test-value-2"
      id="test-value-2"
      role="listitem"
    >
      Second ListItem
    </div>
  </div>
</div>
`;

exports[`List rendering renders a default state 1`] = `
<div>
  <ul
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
  >
    <li
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      data-value="test-value-1"
      id="test-value-1"
      role="listitem"
      value="test-value-1"
    >
      First ListItem
    </li>
    <li
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      data-value="test-value-2"
      id="test-value-2"
      role="listitem"
      value="test-value-2"
    >
      Second ListItem
    </li>
  </ul>
</div>
`;
